websites/03-spa-restapi-mongo/searchapi/k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searchapi-mongo
  labels:
    app: searchapi-mongo
    website: spa-restapi-mongo
spec:
  type: ClusterIP
  ports:
    - port: 4000
      name: http
  selector:
    app: searchapi-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searchapi-mongo
  labels:
    app: searchapi-mongo
    website: spa-restapi-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searchapi-mongo
  template:
    metadata:
      labels:
        app: searchapi-mongo
    spec:
      containers:
        - image: quay.io/arbhatta/examples-03-searchapi:latest
          name: api
          readinessProbe:
            httpGet:
              path: "/health/ready"
              port: 4000
            initialDelaySeconds: 2
            failureThreshold: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    name: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-persistent-storage-claim
      containers:
        - name: mongodb
          image: mongo:4.2
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
