websites/03-spa-restapi-mongo/searchapi/k8s-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: search-api-mongo-ingress
spec:
  rules:
    - host: spa-restapi-mongo-spaship-examples.minikube.info
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: searchapi-mongo
                port:
                  name: http
